Fix issue where GenomicAssembly.containsContig returns true for contigs in different assemblies. Update GenomicAssembly to return a Set rather than SortedSet. Update DefaultGenomicAssembly to use LinkedHashSet instead of TreeSet